20210422 -- 64 ready, 8 left -- RAW translation

--- a/Obsidian/Указатель.md
+++ b/Obsidian/Указатель.md
@@ -25,7 +25,7 @@
 - Разберитесь с тем [[Создание заметок|как создавать новые заметки]],
 - И с тем [[Внутренняя ссылка|как создавать внутренние ссылки]].
 - Попробуйте сделать [[Вложенные файлы|вложение заметок и файлов]].
-- Ознакомьтесь со стандартными [[Сочетание клавиш|сочетаниями клавиш]].
+- Ознакомьтесь со стандартными [[Сочетания клавиш|сочетаниями клавиш]].
 
 ### Официальные плагины
 
@@ -36,7 +36,7 @@
 - [[Работа с тегами]]
 - [[Работа с обратными ссылками]]
 - [[Работа с несколькими файлами]]
-- [[Расположение области]]
+- [[Размещение областей]]
 - [[Работа с несколькими хранилищами]]
 - [[Работа с несколькими курсорами]]
 - [[Использование протокола URI]]
