--- a/Кастомизация/Пользовательские сочетания клавиш.md
+++ b/Кастомизация/Пользовательские сочетания клавиш.md
@@ -1,8 +1,8 @@
 Большинство сочетаний клавиш могут быть настроены в Obsidian.
 
-Мы определили сочетаня клавиш по умолчанию только для наиболее часто используемых команд, однако если вы часто используете определённую команду, вы можете сэкономить много времени добавив горячую клавишу для неё.
+Мы определили сочетаня клавиш по умолчанию только для наиболее часто используемых команд, однако если вы часто используете определённую команду, вы можете сэкономить много времени добавив сочетание клавиш для неё.
 
-Cписок сочетаний клавиш по умолчанию, [[Сочетание клавиш|смотрите здесь]].
+Cписок сочетаний клавиш по умолчанию, [[Сочетания клавиш|смотрите здесь]].
 
 ### Просмотр сочетаний клавиш
 
