--- a/Плагины/Ежедневные заметки.md
+++ b/Плагины/Ежедневные заметки.md
@@ -4,4 +4,4 @@
 
 Вы также можете определить файл-шаблон для ежедневных заметок. Этот шаблон будет скопирован в вашу ежедневную заметку в момент создания, и это хорошее место для тегов или ссылок, которые вы используете каждый день.
 
-Ежедневную заметку можно создать щелкнув по значку календаря в левой панели, либо с помощью [[Палитра команд|Палитры команд]]. Также возможно задать горячую клавишу в [[Сочетание клавиш|Горячих клавишах]].
+Ежедневную заметку можно создать щелкнув по значку календаря в левой панели, либо с помощью [[Палитра команд|Палитры команд]]. Также возможно задать горячую клавишу в [[Сочетания клавиш|Горячих клавишах]].
