--- a/Плагины/Избранное.md
+++ b/Плагины/Избранное.md
@@ -1,5 +1,5 @@
 Избранное (заметки отмеченные звездочкой) – это удобный способ держать важные заметки под рукой. Включение плагина создаст на левой панели закладку со звездочкой, внутри нее будет расположен список добавленных в избранное заметок.
 
-У вас есть несколько вариантов добавления файла в Избранное. Это можно сделать в файловом менеджере по правому клику на нужном файле, выбрав пункт меню «Добавить в избранное»; или через меню открытой заметки; или набрав комманду черезе [[Палитра команд|Палитру команд]]; или просто нажав горчую клавишу, которая может быть задана в [[Сочетание клавиш|настройках сочетаний клавиш]].
+У вас есть несколько вариантов добавления файла в Избранное. Это можно сделать в файловом менеджере по правому клику на нужном файле, выбрав пункт меню «Добавить в избранное»; или через меню открытой заметки; или набрав комманду черезе [[Палитра команд|Палитру команд]]; или просто нажав горчую клавишу, которая может быть задана в [[Сочетания клавиш|настройках сочетаний клавиш]].
 
 Избранные файлы и поисковые запросы могут быть упорядочены путем их перетаскивания.
