--- a/Плагины/Предпросмотр страницы.md
+++ b/Плагины/Предпросмотр страницы.md
@@ -1,5 +1,5 @@
-Предварительный просмотр страницы позволяет просматривать страницу при наведении курсора на внутреннюю ссылку без необходимости фактического перехода на эту страницу.
+Предпросмотр страницы позволяет просматривать страницу при наведении курсора на внутреннюю ссылку без необходимости фактического перехода на эту страницу.
 
 ![[Pasted image 13.png]]
 
-Это работает в области просмотра. В области редакторивания это тоже возможно, если навести курсор на ссылку удерживая нажатой клавишу `Ctrl/Cmd`, появится окно предпросмотра.
+Это работает в области Предварительного просмотра. В области редакторивания это тоже возможно, если навести курсор на ссылку удерживая нажатой клавишу `Ctrl/Cmd`, появится окно предпросмотра.
