--- a/Плагины/Пространства.md
+++ b/Плагины/Пространства.md
@@ -1,18 +1,17 @@
-The Workspaces plugin lets you save and load "workspaces". Each workspace includes pane layout, sidebar state (expanded or collapsed), and file open states.
+Плагин «Пространства» позволяет вам сохранять «состояние рабочей области» приложения. Каждая рабочая область включает в себя разметку областей, состояние боковых панелей (свернуты или развернуты) и открытых файлов.
 
 ![[Pasted image 19.png]]
 
-### Save a workspace
+### Сохранить пространство
 
-Either click on the workspace icon in the ribbon to open "Manage workspaces".
+Щелкните по иконке «Пространства» на боковой панели чтобы открыть раздел управления пространствами.
 
-Give the current layout a new name, click on "Save", and it will appear in the list below.
+Задайте для имя для текущего пространства и нажмите кнопку «Сохранить». После чего оно появится в списке ниже.
 
-### Load a workspace
+### Загрузить пространство
 
-To load or restore a workspace, either open "Manage workspaces" and click on the "Load" button next to the workspace you wish to load, or use the "Load workspaces" command to bring up a command-palette-like interface to search and choose workspaces.
+Для загрузки пространства, откройте разздел управления пространствами и нажмите на кнопку «Загрузить» напротив пространства, которые вы хотите загрузить. Или воспользуйтесь комадой «Загрузить пространство» в палитре команд для выбора определенного пространства.
 
+### Команды
 
-### Commands
-
-This plugin has two commands that you can access through [[Палитра команд]]: manage workspaces and load workspaces. You can also define hotkeys for them.
+Данный плагин имеет две команды доступные черезе [[Палитра команд]]: «Пространство» и «Загрузить пространство». Вы можете задать для них сочетания клавиш.
