--- a/Плагины/Публикация.md
+++ b/Плагины/Публикация.md
@@ -4,7 +4,7 @@
 
 ### Включение плагина
 
-В Obsidian > Настройки > Основные плагины, включите плагин Публикация. После этого в левой панели появится иконка Публикации (которая выглядит как бумажный самолетик).
+В Obsidian > Настройки > Основные плагины включите плагин Публикация. После этого в левой панели появится иконка Публикации (которая выглядит как бумажный самолетик).
 
 После включения плагина вы также можете задать сочетание клавишь для этого параметра или использовать палитру команд для доступа к нему.
 
@@ -40,7 +40,6 @@
 
 Если вы хотите больше настроек, вы можете настроить [[Obsidian Publish#Пользовательский CSS|пользовательский CSS]] и [[Obsidian Publish#Favicon|favicon]].
 
-
 #### Режим чтения
 
 В этом разделе вы можете:
@@ -53,10 +52,10 @@
 
 Ваш сайт поставляется с несколькими компонентами, которые можно включить и выключить. Они включают в себя:
 
-- Файловый менеджер (по умолчанию включен)
-- Локальный граф (по умолчанию включен)
-- Структура или Outline (по умолчанию выключен)
-- Обратная ссылка внизу (по умолчанию выключена)
+- Навигация (по умолчанию включен)
+- Локального граф (по умолчанию включен)
+- Оглавление / структура заголовков (по умолчанию выключен)
+- Обратые ссылки (по умолчанию выключена)
 - Панель поиска (по умолчанию выключена, требуется файловый менеджер)
 
 #### Безопасность
