--- a/Плагины/Список плагинов.md
+++ b/Плагины/Список плагинов.md
@@ -19,7 +19,7 @@
 - [[Панель тегов]]
 - [[Палитра команд]]
 - [[Ежедневные заметки]]
-- [[Zettelkasten префикс]]
+- [[Zettelkasten]]
 - [[Импорт Markdown-файлов]]
 - [[Случайная заметка]]
 - [[Избранное]]
