--- a/Руководства/Внутренняя ссылка.md
+++ b/Руководства/Внутренняя ссылка.md
@@ -8,12 +8,12 @@
 
 Вы можете сослаться на определенный заголовок внутри заметки. Начните вводить внутреннюю ссылку на заметку, как обычно. Когда нужная заметка будет выбрана из списка, нажмите `#` вместо `Enter` и вы увидите список заголовков этой заметки. Наберите название заголовка или перемещайтесь стрелками между ними. Нажимайте `#` для включения подзаголовков, если это необходимо. Для вставки ссылки нажмите `Enter`.
 
-Для того чтобы в ссылке отображался текст, отличный от имени заметки на которую она ссылается в режиме Просмотра, используйте вертикальную черту `|`. Например, `[[Имя заметки|Отображаемое имя заметки]]`. Аналогичным образом можно изменить текст [[Сворачивание заголовков и списков#Для примера|ссылки на заголовок]].
+Для того чтобы в области Предварительного просмотра в ссылке отображался текст, отличный от имени заметки на которую она ссылается, используйте вертикальную черту `|`. Например, `[[Имя заметки|Отображаемое имя заметки]]`. Аналогичным образом можно изменить текст [[Сворачивание заголовков и списков#Для примера|ссылки на заголовок]].
 
 ### Переход по ссылкам
 
-- Для перехода по ссылке в режиме Просмотра, просто нажмите на нее.
-- Для открытия ссылку в новой области в режиме Просмотра, нажмите на нее удерживая `Ctrl/Cmd`.
+- Для перехода по ссылке в области Предварительного просмотра, просто нажмите на нее.
+- Для открытия ссылку в новой области в области Предварительного просмотра, нажмите на нее удерживая `Ctrl/Cmd`.
 - Для перехода по ссылке в режиме Редактирования, нажмите на нее удерживая `Ctrl/Cmd`.
 - Для открытия ссылку в новой области в режиме Редактирования, нажмите на нее удерживая `Ctrl/Cmd-Shift`.
 - Для предварительного просмотра содержимого файла по ссылке, без перехода из текущей заметки, включите плагин [[Предпросмотр страницы]]. При наведении курсора на ссылку будет оборажаться всплывающее окно.
