--- a/Руководства/Импорт данных.md
+++ b/Руководства/Импорт данных.md
@@ -1,52 +1,51 @@
-There are a few differences between the way various PKM and note taking systems work that mean moving between them can be a little complicated. For the most part, if whatever you're using can be converted to markdown, it will work fairly well within Obsidian. But some things, like tags and links, can be tricky.
+Есть некоторые различия между тем как работают различные PKM и системы ведения заметок. Это означает, что перемещение данных между ними может быть немного сложным. В большинстве случаев то, что вы используете может быть сконвертировано в Markdown, и будет весьма неплохо работать c Obsidian. Но с некоторыми вещами, такими как теги и ссылки, могут быть сложности.
 
-On our Forum there is a [post collecting methods that other people have developed](https://forum.obsidian.md/t/meta-post-migration-workflows/768). Right now, it includes:
+На нашем форуме есть [тема с подборкой методов](https://forum.obsidian.md/t/meta-post-migration-workflows/768) импорта данных, рзработанных другими пользователями. На данный момент она включает:
 
-- [Import from Notion](https://forum.obsidian.md/t/import-from-notion/636)
-- [Import from Notion (automated)](https://forum.obsidian.md/t/notion-2-obsidian-migration-instructions/2728)
-- [Import from Evernote](https://forum.obsidian.md/t/import-from-evernote/108)
-- [Import from OneNote](https://forum.obsidian.md/t/new-tool-for-migration-from-onenote-updated-and-improved-version/3055)
-- [Import from Apple Notes](https://forum.obsidian.md/t/migrate-from-apple-notes-to-obsidian/732)
-- [Import from Bear](https://forum.obsidian.md/t/import-from-bear-app/2284)
-- [Import from Zkn3](https://forum.obsidian.md/t/migrating-from-zkn3-to-obsidian-without-losing-your-tags-and-internal-links-documentation/7457)
-- [Import from TiddlyWiki 5](https://forum.obsidian.md/t/migrate-from-tiddlywiki-5-to-obsidian/731)
+- [Импорт из Notion](https://forum.obsidian.md/t/import-from-notion/636)
+- [Автоматизированный импорт из Notion](https://forum.obsidian.md/t/notion-2-obsidian-migration-instructions/2728)
+- [Импорт из Evernote](https://forum.obsidian.md/t/import-from-evernote/108)
+- [Импорт из OneNote](https://forum.obsidian.md/t/new-tool-for-migration-from-onenote-updated-and-improved-version/3055)
+- [Импорт из Apple Notes](https://forum.obsidian.md/t/migrate-from-apple-notes-to-obsidian/732)
+- [Импорт из Bear](https://forum.obsidian.md/t/import-from-bear-app/2284)
+- [Импорт из Zkn3](https://forum.obsidian.md/t/migrating-from-zkn3-to-obsidian-without-losing-your-tags-and-internal-links-documentation/7457)
+- [Импорт из TiddlyWiki 5](https://forum.obsidian.md/t/migrate-from-tiddlywiki-5-to-obsidian/731)
 
-But if you don't see your system on this list, check out the forum post, someone may have solved your issue since this document was written.
+Но если вы не видите свою систему в этом списке, просмотрите сообщение на форуме, возможно, кто-то решил вашу проблему с момента написания этого документа.
 
-Also of note, the makers of nvUltra, another markdown-based note-taking program, have a list on their website of [ways to export to nvUltra](https://nvultra.com/help/importing). In a lot of cases, these will be the same, or at least a helpful place to start.
+Также следует отметить, что создатели nvUltra, еще одной Markdown-программы для создания заметок, собрали на своем сайте [подборку способов экспорта данных для nvUltra](https://nvultra.com/help/importing). В большинстве случаев способы идентичны, и как минимум, это полезное место для начала.
 
-## Built-in tools
+## Встроенные инструменты
 
-### From Roam Research
+### Импорт из Roam Research
 
-If you have data in Roam, it's easy to export and play around with it in Obsidian.
+Есули у васть есть данные в Roam, их легко экспортировать и поэкспериментировать с ними в Obsidian.
 
-> 1. Choose "Export all" in the menu:
+> 1. Выберите "Export all" в меню:
 > ![[Pasted image.png]]
 
-> 2. Click the blue "Export all" button:
+> 2. Нажмите на голубую кнопку "Export all":
 > ![[Pasted image 1.png]]
 
-> 3. Unzip the "Roam-Export-xxxxxxxxxxxxx.zip" into a folder.
+> 3. Распакуйте архив "Roam-Export-xxxxxxxxxxxxx.zip" в папку.
 
-> 4. Click on the vault icon (the tooltip should say "Open another vault") on the bottom left corner in the app, and select "Open folder as vault".
-> Pick the folder you just unzipped to.
+> 4.  Нажмите на иконку «Другое хранилище» в нижнем левом углу приложения и выберите параметр «Открыть папку как хранилище». 
+> Выберите папку в которую вы только что распаковали архив.
 
-> 5. Use our [[Импорт Markdown-файлов]] to convert Roam Research's Markdown format into Obsidian's format.
-> It can be used turn `#tag` into Obsidian `[[links]]`.
-> It can also convert `^^highlight^^` into `==highlight==`.
+> 5. Используйте плагин [[Импорт Markdown-файлов]] для конвертации Markdown-файлов из формата Roam Research в формат Obsidian.
+> Это может быть использовано для конвертации `#tag` в `[[tag]]`.
+> И конвертации `^^highlight^^` в `==highlight==`.
 
+### Импорт из Bear
 
-### From Bear
+Если вы импортируете из Bear, плагин [[Импорт Markdown-файлов]] позволяет конвертировать `::highlight::` в `==highlight==`.
 
-If you're importing from Bear, the [[Импорт Markdown-файлов]] plugin has an option to convert `::highlight::` to `==highlight==`.
+### Использование с Zettelkasten
 
-### Using Zettelkasten
+Если вы используете метод Zettelkasten для структурирования ваших заметок, то вам возможно захочется узнать следующее:
 
-If you've been using the Zettelkasten method to structure your notes, here's something you might want to know:
+Ссылки в Obsidian требуют полного совпадения с именем заметки. Это означает что `[[202001010000]]` не будет правильно ссылаться на `[[202001010000 My Note]]`.
 
-Links in Obsidian require a full match to the note name. This means that `[[202001010000]]` will not properly link to `[[202001010000 My Note]]`.
+Для того, чтобы исправить это, вы можете использовать плагин [[Импорт Markdown-файлов]] для конвертации Zettelkasten ссылок в формат `[[202001010000 My Note]]` или в `[[202001010000 My Note|My Note]]`.
 
-In order to fix that, you can use our [[Импорт Markdown-файлов]] to convert your Zettelkasten links into either `[[202001010000 My Note]]` or `[[202001010000 My Note|My Note]]`.
-
-You might also be interested in the [[Zettelkasten префикс]] plugin.
+Вас также может заинтересовать плагин [[Zettelkasten]].
