--- a/Руководства/Работа с несколькими файлами.md
+++ b/Руководства/Работа с несколькими файлами.md
@@ -12,7 +12,7 @@ To open files in new panes, hold down `Ctrl/Cmd` while you click in Preview mode
 
 ##### 2. You can also create new panes by ==splitting==.
 
-To create other layouts, you can split the current pane in half either horizontally or vertically. Do this with the menu at the top right of the pane, use the command palette, or set a [[Сочетание клавиш]].
+To create other layouts, you can split the current pane in half either horizontally or vertically. Do this with the menu at the top right of the pane, use the command palette, or set a [[Сочетания клавиш]].
 
 ![[Pasted image 16.png]]
 
@@ -42,7 +42,7 @@ For more information see [[Связанная область|linked panes]].
 
 ##### 5. Panes can be ==rearranged by dragging==.
 
-Grab the icon in the upper left corner to arrange them however you need. For detailed information, see [[Расположение области]].
+Grab the icon in the upper left corner to arrange them however you need. For detailed information, see [[Размещение областей]].
 
 ---
 
