--- a/Руководства/Режимы просмотра и редактирования.md
+++ b/Руководства/Режимы просмотра и редактирования.md
@@ -1,5 +1,5 @@
-In obsidian, a document can be viewed in either edit mode or preview mode. In edit mode, you will see basic markdown rendering, but certain things, like code syntax highlighting and embedded files, will only show up in preview mode. Most notably, any images you embed will only be visible in preview mode.
+В Obsidian документ может быть просмотрен в режиме Редактирования или в режиме Предварительного просмотра. В режиме Редактирования вы увидите базовую визуализацию Markdown. Такие вещи как подтсветка синтаксиса кода или вложение файлов будут отображаться только в режиме Предварительного просмотра. В частности, любые встраиваемые изображения будут видны только в режиме Предварительного просмотра.
 
-To toggle between preview and edit mode, click the preview button in the title bar. In edit mode, it will appear as a page; in preview mode, a pencil. If you `Cmd/Ctrl`- click, the preview will be opened in a [[Связанная область]]. You can also toggle Preview Mode by hitting `Cmd/Ctrl-E`, but this hotkey can, of course, be changed.
+Для переключения между режимами Предварительного просмотра и Редактирования, нажмите на кнопку Просмотра в строке заголовка. В области Редактирования иконка будет выглядеть как страница, а в области Предварительного просмотра как карандаш. Если при нажатии на кнопку удерживать `Cmd/Ctrl`, то просмотр будет открыт в [[Связанная область|связанной области]]. Вы также можете переключаться между режимами просмотра по нажатию `Cmd/Ctrl-E`, и это сочетание клавиш конечно может быть изменено.
 
-If you want to default to opening in preview rather than edit mode, a toggle for that can be found in the [[Палитра команд]]. You can also set a [[Сочетание клавиш|Keyboard Shortcut]] for toggilng between default states.
+Если для открытия по умолчанию вы предпочитаете режим Предварительного просмотра вместо Редактирования, этот параметр может быть изменен через [[Палитра команд|Палитру команд]]. Вы также можете изменить [[Сочетания клавиш|сочетание клавиш]] для переключения между вариантами этого параметра.
