--- a/Руководства/Ссылка на блоки.md
+++ b/Руководства/Ссылка на блоки.md
@@ -2,40 +2,38 @@
 
 ### Что такое блок?
 
-«Блоком» может быть параграф, цитата, пункт списка и так далее. В общем, все, что имеет пустые строки до и после, является блоком. ^dcf64c
+«Блоком» может быть параграф, цитата, пункт списка и так далее. В общем, всё, что имеет пустые строки до и после, является блоком. ^dcf64c
 
 ### Ссылка на блок
 
-Для ссылки на блок в определенном файле, начините набор с `[[именифайла` для вызова списка подходящих файлов. После выбора файла наберите `^` и продолжите набирать для поиска блока в нем.
+Для ссылки на блок в определенном файле, начините набор с `[[именифайла` для вызова списка подходящих файлов. После выбора файла наберите `^` и продолжите набор для поиска блока на который хотите сослаться.
 
-To link to a block in a specific file, first type `[[filename` to bring up a list of matched files. After selecting a file, type `^` and continue typing to search for blocks to link to.
+После того, как вы нажмете Enter, для вас будет сгенерирована ссылка на этот блок в формате, аналогичном `[[filename#^dcf64c]]`, где `dcf64c` идентификатор блока, который только что был сгенерирован для вас. 
 
-Once you hit enter, a link to that block will be generated for you, in the format similar to `[[filename#^dcf64c]]`, where `dcf64c` is the block ID that was just generated for you.
+Если вы не уверены, в каком файле находится блок, другой способ – начать ввод с `[[^^` и искать блоки во всех файлах. Поиск будет производиться по всем блокам в вашем хранилище, что может привести к небольшой задержке, если ваше хранилище большое.  
 
-If you're not sure which file the block is in, another method is to type `[[^^` and search for blocks in all files. This will search through all the blocks in your vault, so expect a bit of delay if your vault is large.
+Например, [[Ссылка на блоки#^dcf64c|dcf64c]] это ссылка на блок выше.
 
-For example, [[Ссылка на блоки#^dcf64c]] is a link to a block above.
+### Вложение блока в заметку
 
-### Embed or transclude blocks
+Аналогично [[Вложенные файлы|вложению файлов]], вы можете использовать `!` перед ссылкой на блок, который хотите вложить в заметку.
 
-Similar to [[Вложенные файлы|files embeds]], you can simply use `!` in front of a block link to embed it.
-
-Here's an example:
+Например:
 
 ![[Ссылка на блоки#^dcf64c]]
 
-### Manual block IDs
+### Ручной ввод идентификатора
 
-If you want human readable block IDs, you can manually put `^your-id` after a block. Make sure there's at least one space if you're putting the ID at end of a line.
+Если вы хотите использовать легко читаемый человеком индентификатор блока, вы можете самостоятельно вписать `^your-id` после блока. Убедитесь в том, что если вы помещаете идентификатор в конец строки, перед ним есть хотябы один пробел.
 
-To refer to complex blocks like tables, put the block ID on its own after the block, and make sure there is an empty line both before and after the block ID.
+Чтобы ссылаться на сложные блоки, такие как таблицы, поместите идентификатор блока после самого блока так, чтобы перед ним и после него была пустая строка.
 
-After you add the block ID manually, when you refer to that block, `your-id` will be used instead of a randomly generated block ID.
+После добавления идентификатора блока вручную, когда вы ссылаетесь на этот блок, `your-id` будет использоваться вместо случайно сгенерированного идентификатора.
 
-Note that only letters, numbers, and dashes are allowed in manual block IDs.
+Обратите внимание, что при ручном вводе в идентификаторах блоков допускается использовать только буквы, цифры и дефисы.
 
-### Interoperability
+### Совместимость
 
-Please be aware that block reference is not part of standard Markdown, but rather Obsidian's specific flavor of Markdown. That means these links will not work outside of Obsidian.
+Имейте в виду, что ссылка на блок не является частью стандартного Markdown. Это скорее специфическая разновидность Markdown от Obsidian. Это означает, что эти ссылки не будут работать за пределами Obsidian.
 
-You can still find referenced block by searching for the block ID, although that's a rather manual process. The connection is not lost as long as you have software that can search in a folder.
+Вы по-прежнему можете найти указанный блок, выполнив поиск по идентификатору блока, что является скорее ручным процессом. Таким образом связь не потеряна, если у вас есть программа, которая может выполнять поиск в папке.
