--- a/Руководства/Форматирование заметок.md
+++ b/Руководства/Форматирование заметок.md
@@ -285,7 +285,7 @@ function fancyAlert(arg) {
 
 Первый заголовок | Второй заголовок
 ------------ | ------------
-[[Форматирование заметок\|Форматирование]]	|  [[Сочетание клавиш\|Горячие клавиши]]
+[[Форматирование заметок\|Форматирование]]	|  [[Сочетания клавиш\|Горячие клавиши]]
 
 ---
 
