--- a/Начните здесь.md
+++ b/Начните здесь.md
@@ -11,7 +11,7 @@
 - Как [[Внутренняя ссылка|создавать внутренние ссылки]]
 - Как [[Форматирование заметок|форматировать заметки]] с помощью Markdown
 - Как делать [[Вложенные файлы|вложение файлов]] или других заметок
-- [[Сочетание клавиш]] (горячие клавиши)
+- [[Сочетания клавиш]] (горячие клавиши)
 - Как [[Работа с несколькими файлами|открыть несколько файлов]] друг за другом %%#2do%%
 - Obsidian можно расширить функционально с помощью [[Список плагинов|плагинов]]. Некоторые уже поставляются в комплекте и могут быть включены или отключены в зависимости от ваших потребностей.
 
