20210423 -- Licenses & add-on services folder + Credits note -- translation completed. Fixed links: Contributing to Obsidian

--- a/Obsidian/Сведения об авторах.md
+++ b/Obsidian/Сведения об авторах.md
@@ -1,4 +1,4 @@
-Имена перечислены не по объему вклада, но по алфавиту (по крайней мере, мы стараемся!).
+Имена перечислены не по объему вклада, но по алфавиту (по крайней мере, мы пытаемся!).
 
 ### Команда разработчиков
 
@@ -43,12 +43,12 @@
 
 ### Документация
 
-Первую версию хранилища Справки написал Silver. Поздняя часть была написана [@mediapathic](http://mediapathic.net), при большой поддержке Reggie. Так же мы получили правки от множества участников сообществ в Discord и на форуме.
+Первую версию хранилища Справки написал Silver. Поздняя часть была написана [@mediapathic](http://mediapathic.net), при большой поддержке Reggie. Так же мы получили правки от множества участников сообщества в Discord и на форуме.
 
 Теперь мы поддерживает pull-запросы в хранилище Справки в [нашем репозитории документации](https://github.com/obsidianmd/obsidian-docs/) (GitHub).
 
-##### Добавить свое имя
+##### Как добавить свое имя?
 
-Если вы переводчик, пожалуйста сделайте pull-запрос в формате «Ваше Имя (внесенный язык)» в соответсвующий раздел выше. Пожалуйста, держите список имен в алфавитном порядке, спасибо!
+Если вы переводчик, пожалуйста, сделайте pull-запрос в формате «Ваше Имя (внесенный язык)» в соответствующий раздел выше. Пожалуйста, держите список имен в алфавитном порядке, спасибо!
 
 Если ваше имя не может быть записано на английском языке и в алфавитном порядке, используйте следующий формат: `ваше-github-имяпользователя, [ваше имя на вашем языке] (название языка)`.
