--- a/Лицензии и дополнительные сервисы/Коммерческая лицензия.md
+++ b/Лицензии и дополнительные сервисы/Коммерческая лицензия.md
@@ -1,14 +1,14 @@
-### О комерческой лицензии Obsidian
+### О коммерческой лицензии Obsidian
 
-Обсидиан бесплатен для личного пользования. Для коммерческого (делового) использования в компании с двумя (2) и более сотрудниками требуется коммерческая лицензия. Коммерческое использование включает в себя любые виды деятельности, связанные с работой, такие как запись заметок на собраниях, ведение проектной документации, развертывание ориганизационной вики, и деятельность близкую к ведению заметок, организацию документооборота и управление знаниями.
+Обсидиан бесплатен для личного использования. Для коммерческого (делового) использования в компании с двумя (2) и более сотрудниками требуется коммерческая лицензия. Коммерческое использование включает в себя любые виды деятельности, связанные с работой, такие как запись заметок на собраниях, ведение проектной документации, развертывание организационной вики, и деятельность близкую к ведению заметок, организацию документооборота и управление знаниями.
 
-Для приобретения коммерческой лицензии посетите [нашу страницу с ценами](https://obsidian.md/pricing).
+Для приобретения коммерческой лицензии посетите [нашу страницу расценок](https://obsidian.md/pricing).
 
-### Частозадаваемые вопросы
+### Часто задаваемые вопросы
 
 ##### Могу ли я попробовать Обсидиан для коммерческого использования перед оплатой?
 
-Да. Вы можете оценить работу Обсидиан для коммерческого использования в течение 14 дней.
+Да. Вы можете оценивать работу Обсидиан для коммерческого использования в течение 14 дней.
 
 ##### Требуются ли некоммерческим организациям коммерческая лицензия?
 
@@ -32,7 +32,7 @@
 
 > *Q1. Я фрилансер/писатель/блогер, нужна ли мне коммерческая лицензия?*
 > \
-> A: Если вы не наймете хотя бы одного дополнительного человека, вам не нужна коммерческая лицензия.
+> A: Если вы не наймете хотя бы одного дополнительного человека для работы, вам не нужна коммерческая лицензия.
 
 > *Q2. Я учитель/профессор и я использую Obsidian для моих занятий, нужна ли мне коммерческая лицензия?*
 > \
@@ -48,6 +48,6 @@
 
 > *Q5. Я использую Obsidian для хранения всех своих знаний, как личных, так и профессиональных, потому что их трудно разделить. Нужна ли мне коммерческая лицензия?*
 > \
-> A: Если в ваших заметках содержатся данные, непосредственно связанные с рабочими проектами или процессами компании, занимающей более высокое положение, чем в компания, работающая только с одним человеком, то вам необходима коммерческая лицензи
+> A: Если в ваших заметках содержатся данные, непосредственно связанные с рабочими проектами или процессами компании, в которой работает более одного человека, то вам необходима коммерческая лицензия.
 
 Если у вас все еще остались вопросы относительно требований коммерческой лицензии, напишите нам по адресу support@obsidian.md и подробно опишите вашу ситуацию.
