--- a/Лицензии и дополнительные сервисы/Политика возврата средств.md
+++ b/Лицензии и дополнительные сервисы/Политика возврата средств.md
@@ -1,8 +1,8 @@
 ## Obsidian Catalyst и Unlimited
 
-Средства полученные с приобретния [[Лицензия Catalyst|лицензий Catalyst]] и пожертвований в Obsidian Unlimited идут на поддержку разработки Obsidian. ==Они не подлежат возврату.==
+Средства полученные с приобретения [[Лицензия Catalyst|лицензий Catalyst]] и пожертвований в Obsidian Unlimited идут на поддержку разработки Obsidian. ==Они не подлежат возврату.==
 
-И хотя они и могут предоставить вам эксклюзивный ранний доступ к инсайдерским сборкам или к функциям в бета-версиях (например, доступ к мобильному приложению или другим основным функциям), мы не продаем их как продукт.
+И хотя они и могут предоставить вам эксклюзивный ранний доступ к инсайдерским сборкам или к определенным функциям в бета-версиях (например, доступ к мобильному приложению или другим основным функциям), мы не продаем их как продукт.
 
 Мы не можем обеспечить возврат средств с приобретения лицензий Catalyst. Спасибо за понимание!
 
@@ -10,6 +10,6 @@
 
 ## Все остальные сервисы
 
-Для всех остальных сервисов и лицензий, включая [[Коммерческая лицензия|Коммерческую лицензию]], [[Obsidian Publish]] и [[Obsidian Sync]], вы можете запросмть возврат средств в течение 3 дней с момента покупки без объяснения причин. Пожалуйста свяжитесь с нами через support@obsidian.md или в Discord.
+Для всех остальных сервисов и лицензий, включая [[Коммерческая лицензия|Коммерческую лицензию]], сервисы [[Obsidian Publish]] и [[Obsidian Sync]], вы можете запросить возврат средств в течение 3 дней с момента покупки без объяснения причин. Пожалуйста свяжитесь с нами через support@obsidian.md или в Discord.
 
-По истечении 3 дней, если вам потребуется возврат средств в связи с исключительными обстоятельствами, не стесняйтесь обращаться к нам.
+По истечение 3 дней, если вам потребуется возврат средств в связи с исключительными обстоятельствами, не стесняйтесь обращаться к нам.
