--- a/Плагины/Публикация.md
+++ b/Плагины/Публикация.md
@@ -4,7 +4,7 @@
 
 ### Включение плагина
 
-В Obsidian > Настройки > Основные плагины включите плагин Публикация. После этого в левой панели появится иконка Публикации (которая выглядит как бумажный самолетик).
+В Obsidian в разделе Настройки => Основные плагины включите плагин Публикация. После этого в левой панели появится иконка Публикации (которая выглядит как бумажный самолетик).
 
 После включения плагина вы также можете задать сочетание клавишь для этого параметра или использовать палитру команд для доступа к нему.
 
