--- a/Руководства/Работа с тегами.md
+++ b/Руководства/Работа с тегами.md
@@ -1,12 +1,12 @@
-Tags are a very useful way of grouping multiple notes so they are easy to find. A tag is essentially a clickable search through your entire Vault for a term. For example, clicking on #tags will bring up a search with all notes that contain that tag. Most people use them for broad categories of things, like a class you might be taking notes in or a type of idea. Some Zettelkasten practitioners like to use them as "entry points" for thinking about connected ideas. But ultimately, they are flexible enough that you can use them in any way you would like.
+Теги – это очень удобный способ группировки нескольких заметок, чтобы их было легко найти. По сути тег – это интерактивный поиск термина по всему хранилищу. Например, нажав на ссылку #теги вы найдете все заметки, содержащие этот тег. Большинство людей используют их для классификации вещей, как класс к которому вы относите заметки или тип идеи. Некоторым людям практикующим Zettelkasten нравится использовать их как «точки входа» для размышлений о связанных идеях. Но в конечном счете они достаточно гибкие, чтобы вы могли использовать их как угодно.
 
-### Tag pane
+### Панель тегов
 
-If you have the [[Панель тегов]] plugin enabled, you will see a list of all tags that are used across all of your notes, sorted by frequency. Clicking on any of those will activate that search.
+Если у вас включен плагин [[Панель тегов]], вы можете увидеть список тегов, которые используются во всех ваших заметках, отсортированных по количеству. Нажатие на любой из тегов активирет поиск по нему.
 
-This will allow you to search exact matches of a tag. For example, when clicking , as per usual, but if you want to find all instances of `maintag` with all subtags, you can still use the [[Поиск]] to look for `#maintag`. This is useful in cases where you have subcategories of things but you also want to be able to easily find all instances of the higher category.
+Это позволяет вам искать точные совпадения с этим тегом. For example, when clicking , as per usual, but if you want to find all instances of `maintag` with all subtags, you can still use the [[Поиск]] to look for `#maintag`. This is useful in cases where you have subcategories of things but you also want to be able to easily find all instances of the higher category. %%#2do%%
 
-### Allowed characters
+### Разрешенные символы
 
 Spaces are not allowed in tags. So, if you want to have multiple words in a tag, you can use these formats:
 
