--- a/Вложения/Демонстрация слайдов.md
+++ b/Вложения/Демонстрация слайдов.md
@@ -24,7 +24,7 @@
 
 ## Поощрение сети знаний
 
-- [[Внутренняя ссылка|Внутренние ссылки]]
+- [[Создание внутренних ссылок|Внутренние ссылки]]
 - Автозаполнение ссылок
 - Отображение ссылок на несвязанные упоминания заметки
 - Представление в виде Графа
