--- a/Начните здесь.md
+++ b/Начните здесь.md
@@ -1,6 +1,6 @@
 Привет! Я – заметка в твоем хранилище. 
 
-В то же время я просто Markdown файл где-то на твоем диске. Все здесь в формате простого текста, поэтому тебе не стоит волноваться, что ты меня потеряешь если вдруг [[Obsidian]] однажды исчезнет.
+В то же время я просто файл Markdown где-то на твоем диске. Все здесь в формате простого текста, поэтому тебе не стоит волноваться, что ты меня потеряешь если вдруг [[Obsidian]] однажды исчезнет.
 
 ## Быстрый старт
 
@@ -8,10 +8,10 @@
 
 - [[Палитра команд]] содержит большинство команд, которые нужны при работе с Obsidian. Просто нажми `Ctrl/Cmd-P` и печатай.
 - Как [[Создание заметок|создавать новые заметки]].
-- Как [[Внутренняя ссылка|создавать внутренние ссылки]]
+- Как [[Создание внутренних ссылок|создавать внутренние ссылки]]
 - Как [[Форматирование заметок|форматировать заметки]] с помощью Markdown
-- Как делать [[Вложенные файлы|вложение файлов]] или других заметок
-- [[Сочетания клавиш]] (горячие клавиши)
+- Как делать [[Встраивание вложений в заметки|вложение файлов]] или других заметок
+- [[Сочетания клавиш]]
 - Как [[Работа с несколькими файлами|открыть несколько файлов]] друг за другом %%#2do%%
 - Obsidian можно расширить функционально с помощью [[Список плагинов|плагинов]]. Некоторые уже поставляются в комплекте и могут быть включены или отключены в зависимости от ваших потребностей.
 
