--- a/Плагины/Граф.md
+++ b/Плагины/Граф.md
@@ -1,6 +1,6 @@
 
 
-Shows a graph representation of the [[Внутренняя ссылка|internal links]] between your notes.
+Shows a graph representation of the [[Создание внутренних ссылок|internal links]] between your notes.
 
 Notes with more notes referencing it appear as bigger nodes on the graph.
 
