--- a/Продвинутое использование/Поддерживаемые форматы файлов.md
+++ b/Продвинутое использование/Поддерживаемые форматы файлов.md
@@ -6,4 +6,4 @@
 4. Видеофайлы: `mp4`, `webm`, `ogv`;
 5. PDF файлы: `pdf`.
 
-Все эти типы файлов могут быть [[Вложенные файлы|вложены]] в заметку.
+Все эти типы файлов могут быть [[Встраивание вложений в заметки|вложены]] в заметку.
