--- a/Руководства/Создание заметок.md
+++ b/Руководства/Создание заметок.md
@@ -1,7 +1,7 @@
 Заметки создаются несколькими способами, в зависимости от рабочего процесса:
 
 1. **Подход «от заметки»**. При необходимости создать заметку можно воспользоваться [[Файловый менеджер|файловым менеджером]]. Или сочетанием клавиш `Ctrl/Cmd+N`. Или, если включен плагин [[Палитра команд]], нажать `Ctrl/Cmd-p`, ввести «создать» и выбрать пункт создание новой заметки.
-1. **Подход «от ссылки»**. Если вы предпочитаете свободно создавать заметки, просто используйте [[Внутренняя ссылка|внутреннюю ссылку]] на любое имя заметки (она не обязательно должна существовать в момент создания привязки). Чтобы начать писать во вновь созданной заметке, просто нажмите на название ссылки. Заметка автоматически создастся в хранилище и ее можно сразу редактировать.
+1. **Подход «от ссылки»**. Если вы предпочитаете свободно создавать заметки, просто используйте [[Создание внутренних ссылок|внутреннюю ссылку]] на любое имя заметки (она не обязательно должна существовать в момент создания привязки). Чтобы начать писать во вновь созданной заметке, просто нажмите на название ссылки. Заметка автоматически создастся в хранилище и ее можно сразу редактировать.
 
 ![[Pasted image 3.png]]
 
