--- a/Руководства/Создание ссылок на блоки.md
+++ b/Руководства/Создание ссылок на блоки.md
@@ -1,4 +1,4 @@
-В Obsidian версии 0.9.5 и новее, в дополнение к [[Внутренняя ссылка#Ссылка на заголовок|ссылкам на заголовки]], вы также можете использовать ссылки на блоки.
+В Obsidian версии 0.9.5 и новее, в дополнение к [[Создание внутренних ссылок#Ссылка на заголовок|ссылкам на заголовки]], вы также можете использовать ссылки на блоки.
 
 ### Что такое блок?
 
@@ -12,15 +12,15 @@
 
 Если вы не уверены, в каком файле находится блок, другой способ – начать ввод с `[[^^` и искать блоки во всех файлах. Поиск будет производиться по всем блокам в вашем хранилище, что может привести к небольшой задержке, если ваше хранилище большое.  
 
-Например, [[Ссылка на блоки#^dcf64c|dcf64c]] это ссылка на блок выше.
+Например, [[Создание ссылок на блоки#^dcf64c|dcf64c]] это ссылка на блок выше.
 
 ### Вложение блока в заметку
 
-Аналогично [[Вложенные файлы|вложению файлов]], вы можете использовать `!` перед ссылкой на блок, который хотите вложить в заметку.
+Аналогично [[Встраивание вложений в заметки|вложению файлов]], вы можете использовать `!` перед ссылкой на блок, который хотите вложить в заметку.
 
 Например:
 
-![[Ссылка на блоки#^dcf64c]]
+![[Создание ссылок на блоки#^dcf64c]]
 
 ### Ручной ввод идентификатора
 
