--- a/Руководства/Сочетания клавиш.md
+++ b/Руководства/Сочетания клавиш.md
@@ -1,4 +1,4 @@
-Если плагин [[Палитра команд]] включен, вы можете использовать `Ctrl/Cmd+P` для его вызова. Он покажет вам все доступные в настоящее время команды и сочетания клавиш для них.
+Если плагин [[Палитра команд]] включен, для его вызова вы можете использовать `Ctrl/Cmd+P`. Он покажет вам все доступные в настоящее время команды и сочетания клавиш для них.
 
 Большинство сочетаний клавиш можно настроить в соответствии с вашими потребностями в разделе Настройки => Сочетания клавиш.
 
