--- a/Obsidian/Указатель.md
+++ b/Obsidian/Указатель.md
@@ -2,7 +2,7 @@
 
 Добро пожаловать в хранилище официальной документации Obsidian! Эта страница содержит краткий указатель вещей, которые могут вас заинтересовать.
 
-Ознакомиться с веб версией: https://publish.obsidian.md/help-ru %%#2do%%
+Ознакомиться с веб версией: https://publish.obsidian.md/help-ru %%site must be added when docs translation is ready%%
 
 Если вы обнаружили ошибки или недостающую информацию, вы можете внести свой вклад в работу этого сайта здесь: https://github.com/obsidianmd/obsidian-docs/
 
@@ -16,15 +16,15 @@
 
 ### О программе
 
-- Почитать [[Obsidian|о нашей фислософии]]. %%#2do%%
+- Почитать [[Obsidian|о нашей фислософии]].
 
 ### Начало работы
 
 - Хотите больше функциональности? Попробуйте [[Палитра команд|Палитру команд]], которая содержит все действия, которые могут потребоваться вам для работы с Obsidian. Просто нажмите `Ctrl/Cmd-P` и начните печатать.
-- Изучите особенности нашего Markdown вместе [[Форматирование заметок|форматированием заметок]].
+- Изучите особенности нашего Markdown вместе c [[Форматирование заметок|форматированием заметок]].
 - Разберитесь с тем [[Создание заметок|как создавать новые заметки]],
-- И с тем [[Внутренняя ссылка|как создавать внутренние ссылки]].
-- Попробуйте сделать [[Вложенные файлы|вложение заметок и файлов]].
+- И с тем [[Создание внутренних ссылок|как создавать внутренние ссылки]].
+- Попробуйте сделать [[Встраивание вложений в заметки|вложение заметок и файлов]].
 - Ознакомьтесь со стандартными [[Сочетания клавиш|сочетаниями клавиш]].
 
 ### Официальные плагины
@@ -39,7 +39,7 @@
 - [[Размещение областей]]
 - [[Работа с несколькими хранилищами]]
 - [[Работа с несколькими курсорами]]
-- [[Использование протокола URI]]
+- [[Использование Obsidian URI]]
 
 ### Другие языки
 
