--- a/Руководства/Базовое ведение заметок.md
+++ b/Руководства/Базовое ведение заметок.md
@@ -10,7 +10,7 @@
 
 Попробуйте прямо здесь (убедитесь, что вы в области для редактирования):
 
-Вы заметите, что текст и скобки выделятся голубым цветом. Это означает, что теперь это ссылка. Можно щелкнуть по ссылке в области предварительного просмотра (или `Cmd-click` в области редактора) и вы увидите пустую заметку. Напишите в ней все что вы хотите написать и вернитесь обратно комбинацией `Cmd-alt-влево` как закончите, либо нажмите на название этой заметки ([[Базовое ведение заметок]]) в **панели обратных ссылок** справа. Дополнительная информация о переходах по ссылкам, см. [[Внутренняя ссылка]].
+Вы заметите, что текст и скобки выделятся голубым цветом. Это означает, что теперь это ссылка. Можно щелкнуть по ссылке в области предварительного просмотра (или `Cmd-click` в области редактора) и вы увидите пустую заметку. Напишите в ней все что вы хотите написать и вернитесь обратно комбинацией `Cmd-alt-влево` как закончите, либо нажмите на название этой заметки ([[Базовое ведение заметок]]) в **панели обратных ссылок** справа. Дополнительная информация о переходах по ссылкам, см. [[Создание внутренних ссылок]].
 
 ---
 
