--- a/Руководства/Изменение настроек.md
+++ b/Руководства/Изменение настроек.md
@@ -1,5 +1,5 @@
 Настройки можно открыть нажав на шестеренку в нижнем левом углу или нажав сочетание клавиш `Ctrl/Cmd-,`. Большинство настроек интуитивно понятны, но некоторые требуют дополнительных пояснений.
 
-- Большая часть настроек это переключатели. Если у настройки есть дополнительные параметры, то радом с переключателем может отображаться шестеренка. Например, при нажатии на шестеренку рядом с переключателем «Проверять орфографию», откроется диалог настройки личного словаря, где можно удалить случайно добавленные в него слова.
+- Большая часть настроек это переключатели. Если у настройки есть дополнительные параметры, то рядом с переключателем может отображаться шестеренка. Например, при нажатии на шестеренку рядом с переключателем «Проверять орфографию», откроется диалог настройки личного словаря, где можно удалить случайно добавленные в него слова.
 
-- Включение части плагинов приводит к тому, что их дополнительные настройки появляются в списке вкладок окна Настроек. Например, при включении плагина «Daily Note», появится соответствующая вкладка с дополнительными параметрами.
+- Включение части плагинов приводит к тому, что их дополнительные настройки появляются в списке вкладок окна Настроек. Например, при включении плагина «Ежедневные заметки», появится соответствующая вкладка с дополнительными параметрами.
